objects/Sales_Heirarchy__c/Sales_Heirarchy__c.object-meta.xml
<CustomObject>
    <label>Sales Hierarchy</label>
    <nameField>
        <displayFormat>SH-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>