objects/Sales_Heirarchy__c/fields/Level_1__c.field-meta.xml
<CustomField>
    <fullName>Level_1__c</fullName>
    <label>DEPRECATED - Level 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>