objects/Sales_Heirarchy__c/fields/Level_2__c.field-meta.xml
<CustomField>
    <fullName>Level_2__c</fullName>
    <label>DEPRECATED - Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Level_1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>APJ</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Global Sales</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>North Asia</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>South Asia</fullName>
            </value>
            <value>
                <fullName>US and Canada</fullName>
            </value>
            <value>
                <fullName>USPS Federal</fullName>
            </value>
            <value>
                <fullName>USPS SLED</fullName>
            </value>
            <value>
                <fullName>US SLED</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>