objects/Sales_Heirarchy__c/fields/Level_4__c.field-meta.xml
<CustomField>
    <fullName>Level_4__c</fullName>
    <description>x</description>
    <label>DEPRECATED - Level 4</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Level_3__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Alps</fullName>
            </value>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>ANZ: Emerging Enterprises</fullName>
            </value>
            <value>
                <fullName>ANZ: Enterprise</fullName>
            </value>
            <value>
                <fullName>ANZ: Federal</fullName>
            </value>
            <value>
                <fullName>ASEAN</fullName>
            </value>
            <value>
                <fullName>Benelux</fullName>
            </value>
            <value>
                <fullName>Central: Great Lakes Enterprise</fullName>
            </value>
            <value>
                <fullName>Central: Heartland Enterprise</fullName>
            </value>
            <value>
                <fullName>Central: Midwest Focus</fullName>
            </value>
            <value>
                <fullName>Central: Ohio Valley Focus</fullName>
            </value>
            <value>
                <fullName>Central Europe South</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>EMEA: Central Europe</fullName>
            </value>
            <value>
                <fullName>EMEA: Emerging</fullName>
            </value>
            <value>
                <fullName>EMEA: Middle East</fullName>
            </value>
            <value>
                <fullName>EMEA: Northern Europe</fullName>
            </value>
            <value>
                <fullName>EMEA: Southern Europe</fullName>
            </value>
            <value>
                <fullName>EMEA FSI</fullName>
            </value>
            <value>
                <fullName>EMEA Global Financial</fullName>
            </value>
            <value>
                <fullName>EMEA Northern Europe MSP</fullName>
            </value>
            <value>
                <fullName>EMEA-R</fullName>
            </value>
            <value>
                <fullName>Emerging Enterprises: Central</fullName>
            </value>
            <value>
                <fullName>Emerging Enterprises: Northeast</fullName>
            </value>
            <value>
                <fullName>Emerging Enterprises: Southeast</fullName>
            </value>
            <value>
                <fullName>Emerging Enterprises: West</fullName>
            </value>
            <value>
                <fullName>Fed: Civilian</fullName>
            </value>
            <value>
                <fullName>Fed: DOD - IC</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>France Focus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>