objects/Sales_Heirarchy__c/fields/Role_ID__c.field-meta.xml
<CustomField>
    <fullName>Role_ID__c</fullName>
    <description>Stores the ID for the user role. This is inserted/updated through Flow</description>
    <label>Role ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>