objects/Sales_Heirarchy__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>Level_1__c</columns>
    <columns>Level_2__c</columns>
    <columns>Level_3__c</columns>
    <columns>Level_4__c</columns>
    <columns>Level_5__c</columns>
    <columns>Level_6__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Role_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>