objects/Sales_Heirarchy__c/listViews/Canada_Sales_Hierarchies.listView-meta.xml
<ListView>
    <fullName>Canada_Sales_Hierarchies</fullName>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>Level_6__c</columns>
    <columns>Level_5__c</columns>
    <columns>Level_4__c</columns>
    <columns>Level_3__c</columns>
    <columns>Level_2__c</columns>
    <columns>Level_1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level_3__c</field>
        <operation>equals</operation>
        <value>Canada</value>
    </filters>
    <label>Canada Sales Hierarchies</label>
</ListView>