objects/Sales_Heirarchy__c/listViews/Updated_4_5_24.listView-meta.xml
<ListView>
    <fullName>Updated_4_5_24</fullName>
    <columns>Role__c</columns>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Level_3__c</columns>
    <columns>Level_4__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>4/5/2024 12:00 AM</value>
    </filters>
    <label>Updated 4/5/24</label>
</ListView>