objects/Sales_Heirarchy__c/listViews/US_Central.listView-meta.xml
<ListView>
    <fullName>US_Central</fullName>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>Level_1__c</columns>
    <columns>Level_2__c</columns>
    <columns>Level_3__c</columns>
    <columns>Level_4__c</columns>
    <columns>Level_5__c</columns>
    <columns>Level_6__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level_3__c</field>
        <operation>equals</operation>
        <value>US Central</value>
    </filters>
    <label>US Central</label>
</ListView>